namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tech-test
  labels:
    app.namespace.io/name: tech-test
